adaptive_ver3__popup_ver1

--- a/index.html
+++ b/index.html
@@ -16,6 +16,88 @@
 
 <body>
 
+    <div class="course_info">
+        <div class="course_info__scroll">
+            <div class="course_info__card_in python_open">
+                <button class="button course_info__close"><svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                    </svg></button>
+                <div class="course_info__header">
+                    <p>Алгоритмизация и программирование на языке Python</p>
+                    <img src="media/courses/python.svg" alt="">
+                </div>
+                <div class="course_info__desc">
+                    <p>Один из самых распространенных языков программирования, применяемый в: научных
+                        исследованиях; веб-разработке и разработке игр; Big Data, machine Learning и AI; компьютерной
+                        безопасности.</p>
+                    <p>Занятия проводят преподаватели Яндекс.Лицея (Волгоград)</p>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/age.svg" alt="">
+                    <div class="course_info__section__title">С 12 лет</div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/topics.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Будут рассмотрены темы:</div>
+                        <p>• Логическое, алгоритмическое и математическое мышление</p>
+                        <p>• Принцип работы программного кода</p>
+                        <p>• Принцип работы ИИ</p>
+                        <p>• Интеграция системы в реальном мире</p>
+                        <p>• Проектирование архитектуры систем</p>
+                    </div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/certificate.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Сертификат</div>
+                        <p>К концу курса каждый ученик создает выпускной анимационный ролик, который участвует в
+                            конкурсе на лучшую работу с выдачей грамоты победителя.</p>
+                    </div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/duration.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Продолжительность</div>
+                        <p>6 месяцев (24 занятия по 4 акад. ч.)</p>
+                    </div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/note.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Примечание</div>
+                        <p>Набираются группы и для изучения основ программирования на Python «с нуля», и для изучения
+                            применения Python в реальных проектах. Для знакомых с Python, необходимо пройти
+                            собеседование.</p>
+                    </div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/attention.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Внимание</div>
+                        <p>Отдельно оплачиваются/покупаются расходные материалы для робота.</p>
+                    </div>
+                </div>
+                <div class="course_info__section">
+                    <img src="media/course_info/cost.svg" alt="">
+                    <div class="course_info__section__content">
+                        <div class="course_info__section__title">Стоимость комплектующих:</div>
+                        <p>Если <semibold>не забирать</semibold> своего робота по окончанию курса: <bold>4 200 ₽</bold>
+                        </p>
+                        <p>Если <semibold>забирать</semibold> своего робота по окончанию курса: <bold>7 200 ₽</bold>
+                        </p>
+                    </div>
+                </div>
+                <div class="course_info__button">
+                    <p>16 900 ₽</p>
+                    <button class="button2 subscribe_info"><span>Записаться</span></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="header">
         <a href="">
             <img src="media/logo.svg" alt="" class="header__logo">
@@ -64,13 +146,21 @@
             <img class="whoweare__img" src="media/who_are_we.svg" alt="">
             <div class="whoweare__text">
                 <h2>Что такое <span>ЦДОД</span>?</h2>
-                <p>Мы предоставляем доступ молодым учёным и школьникам, начиная с первого класса, к самым современным
-                    инструментам и подходам для производства сложных систем с использованием аддитивных технологий.</p>
-                <p>Наша основная цель - пробудить интерес детей и молодежи к естественным наукам и современным
-                    технологиям, научно-исследовательской и инновационной деятельности.</p>
-                <p>Вас ждут творческая атмосфера, командная работа и дружный коллектив, индивидуальный подход,
-                    выстраивание образовательной траектории детей, а также участие в творческих и научно-технических
-                    конкурсах!</p>
+
+                <p>
+                    ЦДОД — образовательный центр для ваших детей — будущих инженеров, робототехников и разработчиков
+                    компьютерных программ.
+                </p>
+
+                <p>
+                    Наша цель - пробудить интерес молодежи к естественным наукам и экспериментам, дать возможность работать с
+                    современным оборудованием.
+                </p>
+
+                <p>
+                    Вас ждут творческая атмосфера, командная работа и дружный коллектив, а также участие в
+                    научно-технических конкурсах!
+                </p>
             </div>
         </div>
     </section>
@@ -129,7 +219,7 @@
                     </p>
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="python_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -140,7 +230,7 @@
                     <p>Робототехника</p>
                     <p>с 8 до 15 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="robo_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -151,7 +241,7 @@
                     <p>3D графика + анимация</p>
                     <p>с 11 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="treeD_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -167,7 +257,7 @@
                     </p>
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="CSharp_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -178,7 +268,7 @@
                     <p>Разработка мобильных<br>приложений под Android</p>
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="Android_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -189,7 +279,7 @@
                     <p>2D графика + анимация</p>
                     <p>с 10 лет</p>
                     <div class="courses__card__buttons">
-                        <button class="button"><span>Подробнее</span></button>
+                        <button class="button info_open" course="twoD_open"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
                     </div>
                 </div>
@@ -202,16 +292,16 @@
             <h2>Ждём Вас на наших занятиях!</h2>
             <!-- width="560" height="315" -->
             <div class="videos__items">
-                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/4czkauoI5KQ" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/4czkauoI5KQ"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/k5d6el1VYCY" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/k5d6el1VYCY"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/OFW7cGD3dOI" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="ytvideo ratio16_9" src="https://www.youtube.com/embed/OFW7cGD3dOI"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
