adaptive_ver4__popup_ver2

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                         <img src="media/courses/robotics.svg" alt="">
                     </div>
                     <p>Робототехника</p>
-                    <p>с 8 до 15 лет</p>
+                    <p>с 8 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_robo"><span>Подробнее</span></button>
                         <button class="button2 subscribe"><span>Записаться</span></button>
