prefixes__gap_fix

--- a/index.html
+++ b/index.html
@@ -16,86 +16,93 @@
 
 <body>
 
-
     <!-- <div class="course_modal" id="modal_python">
-        <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
-                <p>Алгоритмизация и программирование на языке Python</p>
-                <img src="media/courses/python.svg" alt="">
-            </div>
-            <div class="course_modal__desc">
-                <p>Один из самых распространенных языков программирования, применяемый в: научных
-                    исследованиях; веб-разработке и разработке игр; Big Data, machine Learning и AI; компьютерной
-                    безопасности.</p>
-                <p>Занятия проводят преподаватели Яндекс.Лицея (Волгоград)</p>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/age.svg" alt="">
-                <div class="course_modal__section__title">С 12 лет</div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/topics.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
-                    <p>• Логическое, алгоритмическое и математическое мышление</p>
-                    <p>• Принцип работы программного кода</p>
-                    <p>• Принцип работы ИИ</p>
-                    <p>• Интеграция системы в реальном мире</p>
-                    <p>• Проектирование архитектуры систем</p>
-                </div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/certificate.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Сертификат</div>
-                    <p>К концу курса каждый ученик создает выпускной анимационный ролик, который участвует в
-                        конкурсе на лучшую работу с выдачей грамоты победителя.</p>
-                </div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/duration.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Продолжительность</div>
-                    <p>6 месяцев (24 занятия по 4 акад. ч.)</p>
-                </div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/note.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Примечание</div>
-                    <p>Набираются группы и для изучения основ программирования на Python «с нуля», и для изучения
-                        применения Python в реальных проектах. Для знакомых с Python, необходимо пройти
-                        собеседование.</p>
-                </div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/attention.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Внимание</div>
-                    <p>Отдельно оплачиваются/покупаются расходные материалы для робота.</p>
-                </div>
-            </div>
-            <div class="course_modal__section">
-                <img src="media/course_info/cost.svg" alt="">
-                <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Стоимость комплектующих:</div>
-                    <p>Если <semibold>не забирать</semibold> своего робота по окончанию курса: <bold>4 200 ₽</bold>
-                    </p>
-                    <p>Если <semibold>забирать</semibold> своего робота по окончанию курса: <bold>7 200 ₽</bold>
-                    </p>
-                </div>
-            </div>
-            <div class="course_modal__button">
-                <p>16 900 ₽</p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
-            </div>
-        </div>
-    </div> -->
+ <div class="course_modal__inner">
+ <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+  fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path
+  d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+ </svg></button>
+ <div class="course_modal__header">
+ <p>Алгоритмизация и программирование на языке Python</p>
+ <img src="media/courses/python.svg" alt="">
+ </div>
+ <div class="course_modal__desc">
+ <p>Один из самых распространенных языков программирования, применяемый в: научных
+  исследованиях; веб-разработке и разработке игр; Big Data, machine Learning и AI; компьютерной
+  безопасности.</p>
+ <p>Занятия проводят преподаватели Яндекс.Лицея (Волгоград)</p>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/age.svg" alt="">
+ <div class="course_modal__section__title">С 12 лет</div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/topics.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+  <p>• Логическое, алгоритмическое и математическое мышление</p>
+  <p>• Принцип работы программного кода</p>
+  <p>• Принцип работы ИИ</p>
+  <p>• Интеграция системы в реальном мире</p>
+  <p>• Проектирование архитектуры систем</p>
+ </div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/certificate.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Сертификат</div>
+  <p>К концу курса каждый ученик создает выпускной анимационный ролик, который участвует в
+  конкурсе на лучшую работу с выдачей грамоты победителя.</p>
+ </div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/duration.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Продолжительность</div>
+  <p>6 месяцев (24 занятия по 4 акад. ч.)</p>
+ </div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/note.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Примечание</div>
+  <p>Набираются группы и для изучения основ программирования на Python «с нуля», и для изучения
+  применения Python в реальных проектах. Для знакомых с Python, необходимо пройти
+  собеседование.</p>
+ </div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/attention.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Внимание</div>
+  <p>Отдельно оплачиваются/покупаются расходные материалы для робота.</p>
+ </div>
+ </div>
+ <div class="course_modal__section">
+ <img src="media/course_info/cost.svg" alt="">
+ <div class="course_modal__section__content">
+  <div class="course_modal__section__title">Стоимость комплектующих:</div>
+  <p>Если <semibold>не забирать</semibold> своего робота по окончанию курса: <bold>4 200 ₽</bold>
+  </p>
+  <p>Если <semibold>забирать</semibold> своего робота по окончанию курса: <bold>7 200 ₽</bold>
+  </p>
+ </div>
+ </div>
+ <div class="course_modal__button">
+ <p>16 900 ₽</p>
+ <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+ </div>
+ </div>
+ </div> -->
+
+    <script>
+        if (/(MSIE|Triden|Edge)/.test(navigator.userAgent)) {
+            document.body.outerHTML = ('<p style="text-align: center; line-height: 50px;"> <bold>Ваш браузер не поддерживается.</bold> <br />Пожалуйста, попробуйте: <bold> <br> <a target="_blank" href="https://www.google.ru/chrome/">Google Chrome</a> <br> <a target="_blank" href="https://www.mozilla.org/ru/firefox/new/">Mozilla Firefox</a> <br> <a target="_blank" href="https://www.opera.com/ru">Opera</a> </bold> </p>');
+        }
+    </script>
+
+
 
 
 
@@ -667,7 +674,7 @@
                     <p>Щербакова Наталия Львовна</p>
                     <p>к.т.н. , доцент кафедры Физика, ведущий инженер ЦМИТ ЛЮКС</p>
                 </div>
-                <div class="team__card">
+                <div class="team__card team__card_last">
                     <img src="media/team/Матохина.jpg" alt="">
                     <p>Матохина Анна Владимировна</p>
                     <p>к.т.н. , доцент кафедры САПРиПК, директор ЦМИТ ЛЮКС</p>
@@ -679,7 +686,7 @@
                     <p>Пеньковская Анна Владимировна</p>
                     <p>менеджер ЦДОД</p>
                 </div>
-                <div class="team__card">
+                <div class="team__card team__card_last">
                     <img src="media/team/Козина.jpg" alt="">
                     <p>Козина Светлана Александровна</p>
                     <p>менеджер ЦДОД</p>
@@ -865,7 +872,7 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
