--- a/index.html
+++ b/index.html
@@ -108,15 +108,10 @@
 
     <div class="course_modal" id="modal_python">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>Алгоритмизация и программирование на языке Python</p>
                 <img src="media/courses/python.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>Один из самых распространенных языков программирования, применяемый в: научных
                     исследованиях; веб-разработке и разработке игр; Big Data, machine Learning и AI; компьютерной
@@ -158,6 +153,11 @@
                 <p>16 900 ₽</p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
@@ -165,15 +165,10 @@
 
     <div class="course_modal" id="modal_robo">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>Робототехника</p>
                 <img src="media/courses/robotics.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>Проектирование, сборка и программирование робота на платформе Arduino.</p>
             </div>
@@ -220,6 +215,11 @@
                 </p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
@@ -227,15 +227,10 @@
 
     <div class="course_modal" id="modal_treeD">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>3D графика и анимация</p>
                 <img src="media/courses/3dsMax.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>3ds max.</p>
             </div>
@@ -274,6 +269,11 @@
                 <p>16 900 ₽</p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
@@ -281,15 +281,10 @@
 
     <div class="course_modal" id="modal_CSharp">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>Алгоритмизация и программирование на языке C# (Си Шарп)</p>
                 <img src="media/courses/Csharp.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>Основы одного из самых востребованных языков - C#.</p>
             </div>
@@ -319,6 +314,11 @@
                 <p>16 900 ₽</p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
@@ -326,15 +326,10 @@
 
     <div class="course_modal" id="modal_Android">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>Разработка мобильных приложений под Android</p>
                 <img src="media/courses/android.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>Одна из самых востребованных профессий - Разработчик мобильных приложений.</p>
             </div>
@@ -373,6 +368,11 @@
                 <p>16 900 ₽</p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
@@ -380,15 +380,10 @@
 
     <div class="course_modal" id="modal_twoD">
         <div class="course_modal__inner">
-            <button class="button course_modal__close" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
-                </svg></button>
-            <div class="course_modal__header">
+            <span class="course_modal__header">
                 <p>2D графика и анимация</p>
                 <img src="media/courses/adobe_animate.svg" alt="">
-            </div>
+            </span>
             <div class="course_modal__desc">
                 <p>Corel, PhotoShop, Animate.</p>
             </div>
@@ -428,6 +423,11 @@
                 <p>16 900 ₽</p>
                 <button class="button2" data-close="subscribe"><span>Записаться</span></button>
             </div>
+            <button class="button course_modal__close" style="margin: 0;" data-close=""><svg width="40" height="40" viewBox="0 0 40 40"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
     </div>
 
