--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• Логическое, алгоритмическое и математическое мышление</p>
                     <p>• Принцип работы программного кода</p>
                     <p>• Принцип работы ИИ</p>
@@ -94,7 +94,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• Основы электротехники;</p>
                     <p>• Проектирование в среде Autodesk Inventor;</p>
                     <p>• Принципы программирования и разработки робототехнических устройств.</p>
@@ -156,7 +156,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• 3D моделирование в Autodesk 3ds Max, текстурирование, модификаторы, освещение, съемочные
                         камеры, компоновка/настройка параметров сцены/видео, рендеринг</p>
                     <p>• Способы создания анимации, редактирование: редактор кривых, эффекты (звук, свечение, туман,
@@ -210,7 +210,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• Типы данных, классы и объекты, функции и методы;</p>
                     <p>• Основы алгоритмов и структур данных (мин. акад. подготовка);</p>
                     <p>• Разработка интерактивных приложений (GUI);</p>
@@ -255,7 +255,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• Создание аккаунта разработчика</p>
                     <p>• Основы языка Java</p>
                     <p>• Методы построения интерфейса мобильных приложений</p>
@@ -309,7 +309,7 @@
             <div class="course_modal__section">
                 <img src="media/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
-                    <div class="course_modal__section__title">Будут рассмотрены темы:</div>
+                    <div class="course_modal__section__title">Темы курса:</div>
                     <p>• Виды и назначение компьютерной графики; разрешение, формат графических файлов;</p>
                     <p>• Двумерная графика: CorelDraw (1/4 курса) и Adobe Photoshop (1/4 курса). Интерфейс, инструменты,
                         свойства, кривые, слои, экспорт-импорт, цветовые модели, монтаж;</p>
