--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <img src="assets/courses/Csharp.svg" alt="">
             </div>
             <div class="course_modal__desc">
-                <p>Основы одного из самых востребованных языков - C# и среды Visual Studio для разработки приложений.
+                <p>Основы одного из самых востребованных языков - C#, работа в среде Visual Studio для разработки приложений.
                 </p>
             </div>
             <div class="course_modal__section">
@@ -306,8 +306,7 @@
                 <img src="assets/courses/adobe_animate.svg" alt="">
             </div>
             <div class="course_modal__desc">
-                <p>Первое знакомство с современными графическими редакторами и видами компьютерной графики - векторной и
-                    растровой. Работа в программах CorelDRAW, Photoshop и Adobe Animate.</p>
+                <p>Первое знакомство с современными графическими редакторами и видами компьютерной графики. Работа в программах CorelDRAW, Adobe Photoshop и Adobe Animate.</p>
             </div>
             <div class="course_modal__section">
                 <img src="assets/course_info/age.svg" alt="">
