--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <img src="assets/course_info/topics.svg" alt="">
                 <div class="course_modal__section__content">
                     <div class="course_modal__section__title">Темы курса:</div>
-                    <p>• Виды и назначение компьютерной графики; разрешение, формат графических файлов;</p>
+                    <p>• Виды и назначение компьютерной графики: векторной и растровой; разрешение, формат графических файлов;</p>
                     <p>• Двумерная графика: CorelDRAW (1/4 курса) и Adobe Photoshop (1/4 курса). Интерфейс, инструменты,
                         свойства, кривые, слои, экспорт-импорт, цветовые модели, монтаж;</p>
                     <p>• Теория анимации, создание сценариев, жанры;</p>
