--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/mains/styles_reset.css">
+    <link rel="stylesheet" href="assets/mains/aos.css">
     <link rel="stylesheet" href="assets/mains/icofont.css">
     <link rel="stylesheet" href="assets/mains/main.css">
     <link
@@ -2292,6 +2293,7 @@
         </div>
     </footer>
 
+    <script src="assets/mains/aos.js"></script>
     <script src="assets/mains/main.js"></script>
 </body>
 
