--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,7 @@
 
     <section class="whoweare" id="whoweare">
         <div class="container whoweare__inner" data-aos="fade-down">
-            <img class="whoweare__img" data-aos-offset="200" src="assets/who_are_we.svg" alt="">
+            <img class="whoweare__img" src="assets/who_are_we.svg" alt="">
             <div class="whoweare__text">
                 <h2>Что такое <span>ЦДОД</span>?</h2>
                 <p>
@@ -1924,7 +1924,7 @@
                 <div class="team__card team__card_last" data-aos="fade-up">
                     <img src="assets/team/Dragunov.jpg" alt="">
                     <p>Драгунов Станислав Евгеньевич</p>
-                    <p><span>Преподаватель Робототехники</span></p>
+                    <p><span>Преподаватель</span></p>
                 </div>
                 <div class="team__card team__card__bottom" data-aos="fade-up">
                     <img src="assets/team/Kozina.jpg" alt="">
@@ -1934,7 +1934,7 @@
                 <div class="team__card team__card__bottom team__card_last" data-aos="fade-up">
                     <img src="assets/team/Kosov.jpg" alt="">
                     <p>Косов Андрей Васильевич</p>
-                    <p><span>Преподаватель Python</span></p>
+                    <p><span>Преподаватель</span></p>
                 </div>
             </div>
         </div>
