--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -133,7 +133,7 @@
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b><span> + комплектующие</span>
                 </p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -188,7 +188,7 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -235,7 +235,7 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -289,7 +289,7 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -346,7 +346,7 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <button class="button2" data-close="subscribe"><span>Записаться</span></button>
+                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -536,7 +536,7 @@
                 <p class="main__text" data-aos="fade-up">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
                 <p class="main__text strong" data-aos="fade-up">Изобретай будущее с нами!</p>
                 <p class="main__line" style="width: 35%"></p>
-                <button class="button subscribe"><span>Записаться</span></button>
+                <a class="button" href="#contacts"><span>Записаться</span></a>
             </div>
             <svg class="main__right" data-aos="fade-right" fill="none" xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 516 473">
@@ -1796,7 +1796,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_python"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
                 <div class="courses__card c__robo" data-aos="fade-up">
@@ -1807,7 +1807,7 @@
                     <p>с 8 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_robo"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
                 <div class="courses__card c__3d" data-aos="fade-up">
@@ -1818,7 +1818,7 @@
                     <p>с 11 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_treeD"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
             </div>
@@ -1834,7 +1834,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_CSharp"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
                 <div class="courses__card c__android" data-aos="fade-up">
@@ -1845,7 +1845,7 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_Android"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
                 <div class="courses__card c__2d" data-aos="fade-up">
@@ -1856,7 +1856,7 @@
                     <p>с 10 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_twoD"><span>Подробнее</span></button>
-                        <button class="button2 subscribe"><span>Записаться</span></button>
+                        <a class="button2" href="#contacts"><span>Записаться</span></a>
                     </div>
                 </div>
             </div>
