--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="assets/mains/aos.min.css">
     <link rel="stylesheet" href="assets/mains/icofont.min.css">
     <link rel="stylesheet" href="assets/mains/main.min.css">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
     <link rel="shortcut icon" type="image/png" href="assets/logo_small.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <title>ЦДОД</title>
+    <meta name="yandex-verification" content="f2e801838a517225" />
+</head>
+
+<body>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
@@ -31,11 +34,7 @@
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/84547264" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
-    <meta name="yandex-verification" content="f2e801838a517225" />
     <!-- /Yandex.Metrika counter -->
-</head>
-
-<body>
     <script>
         if (/(MSIE|Triden|Edge)/.test(navigator.userAgent)) {
             document.body.outerHTML = ('<p style="text-align: center; line-height: 50px;"> <b>Ваш браузер не поддерживается.</b> <br />Пожалуйста, попробуйте: <b> <br> <a target="_blank" href="https://www.google.ru/chrome/">Google Chrome</a> <br> <a target="_blank" href="https://www.mozilla.org/ru/firefox/new/">Mozilla Firefox</a> <br> <a target="_blank" href="https://www.opera.com/ru">Opera</a> </b> </p>');
@@ -383,7 +382,7 @@
 
     <div class="mobile_modal_nav">
         <div class="mobile_modal_nav__inner">
-            <img class="mobile_modal_nav__logo" src="assets/logo_forblackbackr.svg" alt="">
+            <img width="167" height="38" class="mobile_modal_nav__logo" src="assets/logo_forblackbackr.svg" alt="">
             <a href="#whoweare">• О НАС</a>
             <a href="#courses">• КУРСЫ</a>
             <a href="#videos">• ВИДЕО</a>
@@ -438,14 +437,13 @@
                 <p class="main__line" style="width: 35%"></p>
                 <a class="button" href="#contacts"><span>Записаться</span></a>
             </div>
-            <img class="main__right" data-aos="fade-right" src="assets/main_classroom.svg" alt="">
+            <img width="516" height="473" class="main__right" data-aos="fade-right" src="assets/main_classroom.svg" alt="">
         </div>
     </section>
 
     <section class="whoweare" id="whoweare">
         <div class="container whoweare__inner" data-aos="fade-down">
-            <!-- <img class="whoweare__img" src="assets/who_are_we.svg" alt=""> -->
-            <img class="whoweare__img" src="assets/who_are_we.svg" alt="">
+            <img width="550" height="288" class="whoweare__img" src="assets/who_are_we.svg" alt="">
             <div class="whoweare__text">
                 <h2>Что такое&#32;<span>ЦДОД</span>?</h2>
                 <p>
@@ -686,7 +684,7 @@
                 <div class="faqq__accordions">
                     <div class="accordion active">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Как оформить ребенка на курсы? Какие документы нужны для
                                 оформления? </p>
                         </div>
@@ -700,7 +698,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Справится ли ребенок? Нужны ли базовые знания?
                             </p>
                         </div>
@@ -714,7 +712,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Что приносить с собой на занятия?
                             </p>
                         </div>
@@ -730,7 +728,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Какой документ выдается по окончании курсов?
                             </p>
                         </div>
@@ -742,7 +740,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Что делать, если ребенок заболел? Как компенсировать пропущенные
                                 занятия?
                             </p>
@@ -756,7 +754,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Если ребенок больше не сможет посещать занятия, можно ли вернуть
                                 за
                                 них деньги?
@@ -770,7 +768,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Есть ли какие-либо скидки или льготы для учащихся?
                             </p>
                         </div>
@@ -781,7 +779,7 @@
                     </div>
                     <div class="accordion">
                         <div class="accordion__head">
-                            <img src="assets/open_close.svg" alt="">
+                            <img width="20" height="20" src="assets/open_close.svg" alt="">
                             <p class="accordion__title">Есть ли образовательная лицензия?
                             </p>
                         </div>
